Done for Presentation

--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -15,5 +15,5 @@
 <a class="create-match" routerLink="match/new">Create Match</a>
 
 <div class="match-list">
-  <match-list></match-list>
+  <admin-match-list></admin-match-list>
 </div>
