--- a/src/app/signup-admin/signup-admin.component.css
+++ b/src/app/signup-admin/signup-admin.component.css
@@ -30,7 +30,7 @@
   padding-bottom: 500px;
   display: flex;
   flex-flow: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .logo img {
