--- a/src/app/admin-page/admin-login/admin-login.component.html
+++ b/src/app/admin-page/admin-login/admin-login.component.html
@@ -2,6 +2,10 @@
   <h2> Sign in to Footballer As Admin. </h2>
   <p> Enter Your Details Below</p>
 
+  <p *ngIf="errorMessage" class="error">
+    {{ errorMessage }}
+  </p>
+
   <form (ngSubmit)="loginAdmin()">
     <label for="email-input"> EMAIL </label>
     <br />
