--- a/src/app/admin-page/admin-signup/admin-signup.component.html
+++ b/src/app/admin-page/admin-signup/admin-signup.component.html
@@ -1,6 +1,10 @@
 <div class="form">
   <h2> Sign Up </h2>
 
+  <p *ngIf="errorMessage" class="error">
+    {{ errorMessage }}
+  </p>
+
   <form (ngSubmit)="startSignupAjax()">
     <label for="placeName-input"> PLACE NAME </label>
     <br />
