--- a/src/app/player-page/player-signup/player-signup.component.html
+++ b/src/app/player-page/player-signup/player-signup.component.html
@@ -1,6 +1,10 @@
 <div class="form">
   <h2> Sign Up </h2>
 
+  <p *ngIf="errorMessage" class="error">
+    {{ errorMessage }}
+  </p>
+
   <form (ngSubmit)="startPlayerSignup()">
     <label for="fullname-input"> FULL NAME </label>
     <br />
